# marketplace

./: .editorconfig  .gitignore  .lsp.json  .sqlfluff  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Claude-Code-Plugins.code-workspace  Makefile  PARALLEL_EXECUTION_PLAN.md  PROGRESS.md  README.md  REMEDIATION_PLAN.md  RESEARCH_NOTES.md  RESEARCH_PLAN.md  RESEARCH_REPORT.md
.claude/: adr.local.md  github-social.local.md  hooks.json  settings.local.json  xml-templates.md
.claude-plugin/: .gitkeep  marketplace.json
.coordination/: develop-branch-task.md  git-commit-plan.sh  hooks-implementation-summary.md  validation-checklist.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  generate-demos.yml  release.yml  test-nsip-hooks.yml
demos/: README.md  nsip-discover.tape  zircote-explore.tape
docs/architecture/: README.md  RESEARCH_NOTES.md  RESEARCH_PLAN.md  RESEARCH_REPORT.md
docs/plans/: 2026-02-13-refactor-simplifier-swarm.md
plugins/.claude-plugin/: marketplace.json
plugins/adr/: README.md
plugins/agent-sdk-dev/: README.md
plugins/auto-harness/: .bumpversion.toml  CHANGELOG.md  README.md
plugins/copilot/: README.md
plugins/datadog/: .bumpversion.toml  CHANGELOG.md  README.md
plugins/document-skills/: .bumpversion.toml  CHANGELOG.md  README.md
plugins/gh/: CHANGELOG.md  (+2 more)
plugins/z/skills/datadog-entity-generator/: SKILL.md  pyproject.toml
plugins/z/skills/datadog-entity-generator/references/: integration-patterns.md  interview-guide.md
scripts/: smart-bump.py  validate.py
(+566 files in other folders)
